--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             </div>
           </div>
           <div class="indcol indcol2">
-            <h3 style="color: #233d5a;">你好呀冒險者~~</h3>
-            <p style="font-size: large; color:   #0b131bf1;"><b>我是周洺翰，畢業於國立台北教育大學玩具與遊戲設計研究所。<br>
+            <h3 style="color: #182028;">你好呀冒險者~~</h3>
+            <p style="font-size: large; color:   #182028;"><b>我是周洺翰，畢業於國立台北教育大學玩具與遊戲設計研究所。<br>
               遊戲對自己來說是最好的紓壓劑，從大學二年級開始加入了系上的遊戲讀書會，在那裡跟大家一起玩遊戲做遊戲，將自己的想法透過遊戲實現再與其他人的想法碰撞，那是多麼令人開心的事。<br>
               進入資策會實習後學到很多以前不常碰過的第三方插件如Vuforia、Google VR等，並沒有像以前所認為的那麼困難，能夠嘗試更多新的可能，開拓自己的視野，更有信心做出更多樣的遊戲。<br>
               讀研究所時與志同道合的同學一起做遊戲並去參與各種比賽，那時候與夥伴像是沒日沒夜地為了目標所奮鬥，雖然辛苦卻也留下深刻的美好回憶和收穫。<br>
@@ -169,25 +169,25 @@
   <section class="wrapper style1">
     <div class="inner">
       <header class="align-center" style = "margin-bottom: 3%;">
-        <h2>成就紀錄(作品集)</h2>
+        <h1 >成就紀錄(作品集)</h1>
       </header>
       <div class="indflex indflex-3">
         <div class="indcol align-center">
-          <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #233d5a, 0px 0px 0px 8px rgba(255, 255, 255, 0.1);">
+          <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #182028;">
             <img src="Image/CircleProject.png" alt="" />
           </div>
           <p style = " margin-bottom: 0%;">與夥伴一起做遊戲~ </p>
           <a href="collectionProject.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
         </div>
         <div class="indcol align-center">
-          <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #233d5a, 0px 0px 0px 8px rgba(255, 255, 255, 0.1);">
+          <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #182028;">
             <img src="Image/CirclePractice.png" alt="" />
           </div>
           <p style ="margin-bottom: 0%;">自己磨練技術~ </p>
           <a href="collectionPractice.html" class="btn btn-primary" style="color: white;">&emsp;&emsp;GO&emsp;&emsp;</a>
         </div>
         <div class="indcol align-center">
-          <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #233d5a, 0px 0px 0px 8px rgba(255, 255, 255, 0.1);">
+          <div class="indimage round indfit" style="box-shadow: 0px 0px 0px 10px #182028;">
             <img src="Image/CircleGameJam.png" alt="" />
           </div>
           <p style = " margin-bottom: 0%;">隨機跟同好做奇怪遊戲~ </p>
@@ -200,7 +200,7 @@
   <section class="wrapper style2" style="padding-top: 0%; padding-bottom: 0%;">
     <br>
     <div class="inner">
-      <h1 class="my-4">技能組</h1>
+      <h1 class="my-4 ">技能組</h1>
 
       <!-- Marketing Icons Section -->
       <div class="row">
@@ -208,7 +208,7 @@
           <div class="card h-100">
             <h4 class="card-header" style="background-color:#233d5a; color: #ffffff;">C / C++ 語言</h4>
             <div class="card-body" style="background-color:#fafafa;">
-              <ul class="card-text" style="font-size: large; color:#0b131bf1; font-weight: bold;">
+              <ul class="card-text" style="font-size: large; color:#182028; font-weight: bold;">
                 <li>熟悉C、C++語言大部分特色且運用。</li>
                 <li>曾以C++為腳本使用COCOS2DX 和 OpenGL 各別做出兩個小遊戲。</li>
               </ul>
@@ -287,6 +287,20 @@
       </div>
     </div>
     <br>
+  </section>
+
+  <section class="wrapper style1">
+    <div class="inner">
+      <!-- 2 Columns -->
+      <div class="indcol indcol2">
+        <h3 style="color: #233d5a;">你好呀冒險者~~</h3>
+        <p style="font-size: large; color:   #182028;"><b>我是周洺翰，畢業於國立台北教育大學玩具與遊戲設計研究所。<br>
+          遊戲對自己來說是最好的紓壓劑，從大學二年級開始加入了系上的遊戲讀書會，在那裡跟大家一起玩遊戲做遊戲，將自己的想法透過遊戲實現再與其他人的想法碰撞，那是多麼令人開心的事。<br>
+          進入資策會實習後學到很多以前不常碰過的第三方插件如Vuforia、Google VR等，並沒有像以前所認為的那麼困難，能夠嘗試更多新的可能，開拓自己的視野，更有信心做出更多樣的遊戲。<br>
+          讀研究所時與志同道合的同學一起做遊戲並去參與各種比賽，那時候與夥伴像是沒日沒夜地為了目標所奮鬥，雖然辛苦卻也留下深刻的美好回憶和收穫。<br>
+          我想我可以幫自己總結"遊戲豐富了我的人生，而我也將以遊戲豐富他人而活"。</b></p>
+      </div>
+    </div>
   </section>
 
   </div>
